few bugs fixed (useless scrollbar, custom cursor overflow)

--- a/src/Components/Cursor/Cursor.scss
+++ b/src/Components/Cursor/Cursor.scss
@@ -5,17 +5,17 @@
     align-items: center;
     justify-content: center;
     line-height: 0;
-    position: absolute;
+    position: fixed;
     border: none;
-    outline: 1px solid $green1;
-    width: 100px;
-    height: 100px;
+    outline: 2px solid $green1;
+    width: 80px;
+    aspect-ratio: 1;
     border-radius: 50%;
-    font-size: 10px;
     letter-spacing: 1px;
-    font-family: $satoshi;
+    font-weight: 500;
+    font-family: $font-family;
     color: $green;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgb(0, 0, 0, 0.2);
     pointer-events: none;
     z-index: 999;
 
