--- a/src/Components/ProjectCard/ProjectCard.scss
+++ b/src/Components/ProjectCard/ProjectCard.scss
@@ -1,112 +1,116 @@
 @import "/src/settings.scss";
 
 .project-card {
-  min-height: 15vw;
-  flex: 1;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 62px;
-  color: $green;
-  text-decoration: none;
-  border-bottom: 1px solid $black1;
-  cursor: none;
-
-  .project-card__wrapper {
+    min-height: 15vw;
+    flex: 1;
     width: 100%;
-    height: clamp(60px, 10vw, 100px);
     display: flex;
     align-items: center;
-    justify-content: flex-start;
-    gap: 1vw;
-    padding: 0 5vw;
+    justify-content: space-between;
+    font-size: 62px;
+    color: $green;
+    text-decoration: none;
+    cursor: none;
 
-    .project-id {
-      height: 100%;
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
-      font-size: clamp(12px, 2vw, 16px);
-      font-weight: 200;
+    &:not(:last-child) {
+        border-bottom: 1px solid $black1;
+    }
 
-      span {
+    .project-card__wrapper {
+        width: 100%;
+        height: clamp(60px, 10vw, 100px);
         display: flex;
         align-items: center;
-        justify-content: center;
-        position: relative;
+        justify-content: flex-start;
+        gap: 1vw;
+        padding: 0 5vw;
 
-        &::after {
-          position: absolute;
-          content: "";
-          left: 0;
-          bottom: 0px;
-          width: 100%;
-          height: 1px;
-          background: $green;
+        .project-id {
+            height: 100%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            font-size: clamp(12px, 2vw, 16px);
+            font-weight: 200;
+
+            span {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $green1;
+                position: relative;
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    left: 0;
+                    bottom: 0px;
+                    width: 100%;
+                    height: 1px;
+                    background: $green1;
+                }
+            }
         }
-      }
+
+        h2 {
+            width: 100%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-end;
+            @include title;
+            // font-size: clamp(50px, 10vw, 180px);
+            position: relative;
+
+            .title {
+                transition: transform 0.2s ease;
+            }
+
+            // &::after {
+            //   content: "";
+            //   position: absolute;
+            //   left: 0;
+            //   bottom: 0;
+            //   width: 0;
+            //   background: linear-gradient(to left, transparent, $green1, transparent);
+            //   height: 50%;
+            //   z-index: -1;
+            //   transition: width 0.2s ease-in-out;
+            // }
+        }
+
+        .arrow {
+            position: absolute;
+            font-size: 4vw;
+            color: $green1;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
     }
 
-    h2 {
-      width: 100%;
-      display: flex;
-      align-items: flex-end;
-      justify-content: flex-end;
-      @include title;
-      // font-size: clamp(50px, 10vw, 180px);
-      position: relative;
-
-      .title {
-        transition: transform 0.2s ease;
-      }
-
-      // &::after {
-      //   content: "";
-      //   position: absolute;
-      //   left: 0;
-      //   bottom: 0;
-      //   width: 0;
-      //   background: linear-gradient(to left, transparent, $green1, transparent);
-      //   height: 50%;
-      //   z-index: -1;
-      //   transition: width 0.2s ease-in-out;
-      // }
-
-    }
-    .arrow{
-      position: absolute;
-      font-size: 4vw;
-      color: $green1;
-      opacity: 0;
-      transition: opacity .3s ease;
-    }
-
-  }
-  &:hover .arrow {
-    display: block;
-    opacity: 1;
-  }
-
-  &:hover .title {
-    transform: translateX(-5vw);
-  }
-
-  
-  // &:hover h2::after {
-  //   width: 100%;
-  // }
-
-  @media screen and (max-width: 860px) {
-    &{
-      cursor: pointer;
-    }
     &:hover .arrow {
-      display: none;
+        display: block;
+        opacity: 1;
     }
-  
+
     &:hover .title {
-      transform: translateX(0);
+        transform: translateX(-5vw);
     }
-}
+
+    // &:hover h2::after {
+    //   width: 100%;
+    // }
+
+    @media screen and (max-width: 860px) {
+        & {
+            cursor: pointer;
+        }
+
+        &:hover .arrow {
+            display: none;
+        }
+
+        &:hover .title {
+            transform: translateX(0);
+        }
+    }
 }
