--- a/src/Components/Stack/Stack.scss
+++ b/src/Components/Stack/Stack.scss
@@ -5,10 +5,11 @@
   height: 30vh;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   font-family: $satoshi;
   margin-bottom: 5vh;
-  overflow: hidden;
+  padding: 0 5vw;
+  // overflow: hidden;
 
   .stack-flex {
     width: 100%;
@@ -21,6 +22,12 @@
     border-top: 1px dashed $black1;
     cursor: none;
 
+    @media screen and (max-width: 860px) {
+      & {
+        cursor: pointer;
+      }
+    }
+
     .stack {
       width: 100%;
       flex: 1;
@@ -29,10 +36,11 @@
       justify-content: space-between;
       color: $green;
       font-size: 22px;
-      padding: 0 5vw;
+      // padding: 0 5vw;
       overflow: hidden;
       transition: color 0.2s ease;
       border-bottom: 1px dashed $black1;
+      // background: red;
 
       .technos-box {
         width: fit-content;
