--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -1,7 +1,7 @@
 @import "/src/settings.scss";
 
 .about {
-  width: 100vw;
+  width: 99.5vw;
   max-width: 1920px;
   height: 100%;
   @include flex-center;
