--- a/src/Pages/Projects/Projects.scss
+++ b/src/Pages/Projects/Projects.scss
@@ -103,11 +103,12 @@
                 width: 40%;
                 height: 100%;
                 @include flex-center;
-
+                border-left: 1px solid $black1;
+                
                 a{
-                 cursor: none;
-
-                  img{
+                    cursor: none;
+                    
+                    img{
                     width: 100%;
                     height: 100%;
                     object-fit: contain;
