--- a/src/index.scss
+++ b/src/index.scss
@@ -6,10 +6,6 @@
     box-sizing: border-box;
 }
 
-html{
-    outline: 1px solid red;
-}
-
 body{
     width: 100%;
     max-width: 1920px;
